marketapp/listings/static/css/styles.css
.site-nav {
    text-align: right;
    top: 10px;
    padding: 0;
    list-style: none;
}

.site-nav-url {
  display: inline-block;
  background-color: #037bfc;
  padding: 10px;
}

.site-nav-url:hover {
  background-color: #255180;
}

.site-nav-url a {
  color: white;
}

.site-nav-url a:hover {
  text-decoration: none;
}

.site-nav-container {
  border-bottom: 1px solid grey;
  padding-bottom: 5px;
  box-shadow: 0px 5px 5px 2.5px;
}

.header-title {
  margin-top: 10px;
  margin-left: -8px;
}

.page-content {
  padding-top: 20px;
  padding-left: 0px;
}

.dropdown {
  position: relative;
  display: inline-block;
  color: white;
}

.dropdown-content {
  display: none;
  position: absolute;
  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
  z-index: 1;
}

.dropdown-content a {
  text-decoration: none;
  display: block;
  text-align: center;
}

.dropdown:hover .dropdown-content {
  display: block;
}

.dropdown a {
  color: white;
}

.mystuff-dropdown a {
  width: 79px;
}

.mystuff-dropdown-listing a {
  width: 99px;
}

.mystuff-dropdown-all-listings a {
  width: 95px;
}

.btn-blue {
  background-color: blue !important;
  color: white !important;
}

.btn-green {
  background-color: green !important;
  color: white !important;
}

.add-button {
  text-align: right;
  display: inline-block;
}

.content-header-row {
  margin-left: -33px !important;
  margin-right: -50px !important;
}

